# trifinger_simulation

./: .flake8  .gitignore  .readthedocs.yml  .setup.py.swp  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README.md  conda_activate_trifinger_simulation.sh  create_conda_env.sh  environment.yml  package.xml  pyproject.toml  requirements.txt  run  run.sh  run_in_simulation.py  setup.cfg  setup.py  train_real_finger.py  update_robot_properties.sh
.github/workflows/: black.yml  build_pr.yml  doc_test.yml  docs.yml  flake8.yml  lint.yml  mypy.yml  style_checker.yml  test.yml
demos/: demo_cameras.py  demo_control.py  demo_fancy_torque_control.py  demo_inverse_kinematics.py  demo_load_gym_env.py  demo_move_long_a_circle.py  demo_move_task_in_sim.py  demo_move_to_random_points.py  demo_move_up_and_down.py  demo_object_tracker.py  demo_pinocchio.py  demo_plain_torque_control.py  demo_random_policy.py  demo_robot_interface.py  demo_sim_vs_real.py  demo_switch.py  demo_trifinger_platform.py  load_gym_env.py
demos/catkin/: demo_object_tracker.py  demo_robot_interface.py
docs/: Makefile  challenge_phase_1.rst  conf.py  driverinterface.html  driverinterface.rst  genindex.html  getting_started.rst  index.html  index.rst  installation.html  installation.md  installation.rst  objects.inv  requirements.txt  search.html  searchindex.js  sim_finger.html  sim_finger.rst  sim_finger_screenshots.py  simvsreal.html  simvsreal.rst  singularity.html  singularity.rst  timesteplogic.rst  trifingerplatform.html  trifingerplatform.rst
docs/_sources/: index.rst.txt
docs/_static/: custom.css
docs/api/: camera.rst  collision_objects.rst  finger_types_data.rst  pinocchio_utils.rst  sim_finger.rst  trifingerplatform.rst  visual_objects.rst
docs/getting_started/: finger_types.rst  first_steps.rst  installation.rst  overview.rst
docs/html/doctrees/: driverinterface.doctree  index.doctree  installation.doctree  simvsreal.doctree  trifingerplatform.doctree
docs/html/html/: driverinterface.html  index.html  installation.html  objects.inv  search.html  sim_finger.html  singularity.html
docs/html/html/_modules/: index.html
docs/html/html/_sources/: driverinterface.rst.txt  (+1 more)
docs/simreal/: real_finger.rst  realwithsim.rst  simvsreal.rst  simwithreal.rst  src_trifinger_reach-py.rst  timesteplogic.rst
example/: evaluate_policy.py  example_pushing_training_env.py  train_pushing_ppo.py  view_pushing_ppo.py
html/doctrees/: environment.pickle  sim_finger.doctree  singularity.doctree
html/html/: .buildinfo  genindex.html  searchindex.js  simvsreal.html  trifingerplatform.html
html/html/_sources/: installation.rst.txt  simvsreal.rst.txt
include/pybullet_fingers/: pybullet_driver.hpp
include/trifinger_simulation/: pybullet_driver.hpp
python/: playback_data.py  plot_position_error.py  plot_tip_position_trajectories.py
python/pybullet_fingers/: __init__.py  base_finger.py  camera.py  collision_objects.py  finger_types_data.py  observation.py  obstruct.py  real_finger.py  sample.py  sim_finger.py  trifinger_platform.py  visual_objects.py
python/pybullet_fingers/gym_wrapper/: __init__.py  data_logger.py  finger_spaces.py  utils.py
python/pybullet_fingers/tasks/: move_cube.py
python/trifinger_simulation/: __init__.py  base_finger.py  camera.py  collision_objects.py  finger_types_data.py  observation.py  pinocchio_utils.py  real_finger.py  sample.py  sim_finger.py  trifinger_platform.py  trifingerpro_limits.py  visual_objects.py
python/trifinger_simulation/gym_wrapper/: __init__.py
python/trifinger_simulation/tasks/: __main__.py  move_cube.py  move_cube_on_trajectory.py
scripts/: check_position_control_accuracy.py  evaluate_policy.py  playback_data.py  plot_tip_position_trajectories.py  profiling.py  pybullet_backend.py  replay_action_log.py  rrc_evaluate.py  run_evaluate_policy_all_levels.py  run_evaluation.py  run_evaluation.sh  run_replay_all_levels.py  screenshot_mode.py  simulation_runscript.py  trifingerpro_model_test.py  view_camera_log_real_and_sim.py
srcpy/: drivers.cpp
submission_system/: custom_rrc.def  goal.json  roboch.json  train_real_finger.py
tests/: .test_cube_env.py.swp  .test_determinism.py.swp  test_action_observation_timing.py  test_camera.py  test_cube_env.py  test_determinism.py  test_finger_types_data.py  test_loading_urdfs.py  test_parallel_instances.py  test_pybullet_backend.cpp  test_pybullet_backend.py  test_reset_joints.py  test_robot_equivalent_interface.py  test_sample.py  test_sim_finger.py  test_tasks_move_cube.py  test_tasks_move_cube_on_trajectory.py  test_tasks_move_cuboid.py  test_tasks_rearrange_dice.py  test_trifinger_platform.py
tests/catkin/: test_pybullet_backend.cpp  test_pybullet_backend.py
tests/test_camera/: camera180_full.yml
tests/test_tasks_move_cube_on_trajectory/: bad_goal.json  good_goal.json  no_goal.json
tests/test_tasks_rearrange_dice/: bad_goal.json  good_goal.json  no_goal.json
trifinger_simulation/: .trifinger_platform.py.swp  .trifingerpro_limits.py.swp  __init__.py  action.py  camera.py  collision_objects.py  finger_types_data.py  pinocchio_utils.py  real_finger.py  sample.py  sim_finger.py  trifinger_platform.py  trifingerpro_limits.py  visual_objects.py
trifinger_simulation/data/camera_params/: camera300_full.yml  camera60_cropped.yml  camera60_cropped_and_downsampled.yml
trifinger_simulation/data/cube_v2/: cube_v2.blend
trifinger_simulation/gym_wrapper/: .__init__.py.swp  __init__.py  data_logger.py  finger_spaces.py
trifinger_simulation/gym_wrapper/envs/: .cube_env.py.swp  .cube_trajectory_env.py.swp  cube_env.py  cube_trajectory_env.py  trifinger_push.py  trifinger_reach.py
trifinger_simulation/tasks/: move_cuboid.py
trifinger_simulation/tasks/move_cube/: __init__.py  __main__.py  evaluate_policy.py  replay_action_log.py  run_evaluate_policy.py  run_replay.py
trifinger_simulation/tasks/move_cube_on_trajectory/: __init__.py  __main__.py  evaluate_policy.py  replay_action_log.py  run_evaluate_policy.py  run_replay.py
trifinger_simulation/tasks/rearrange_dice/: __init__.py  test_reward.py  utils.py
(+73 files in other folders)
