<?xml version="1.0"?>
<package format="2">
  <name>trifinger_simulation</name>
  <version>1.0.2</version>
  <description>
      TriFinger Robot Simulation
  </description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pybind11_vendor</buildtool_depend>

  <depend>robot_interfaces</depend>

  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>pybind11</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_properties_fingers</exec_depend>

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>robot_interfaces</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
