<?xml version="1.0"?>
<package format="3">
  <name>trifinger_simulation</name>
  <version>1.3.0</version>
  <description>
      TriFinger Robot Simulation
  </description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_properties_fingers</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>
