[develop]
script-dir=$base/lib/trifinger_simulation
[install]
install-scripts=$base/lib/trifinger_simulation

[metadata]
name = trifinger_simulation
version = attr: trifinger_simulation.__version__
description = TriFinger Robot Simulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Felix Widmaier
author_email = felix.widmaier@tue.mpg.de
license = BSD 3-Clause License
license_files = LICENSE
url = https://open-dynamic-robot-initiative.github.io/trifinger_simulation
project_urls =
    Documentation = https://open-dynamic-robot-initiative.github.io/trifinger_simulation
    Source Code = https://github.com/open-dynamic-robot-initiative/trifinger_simulation
    Bug Tracker = https://github.com/open-dynamic-robot-initiative/trifinger_simulation/issues
keywords = TriFinger, Simulation, Robotics, Robot
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy >=1.19.1
    scipy >=1.5.4
    pin >=2.4.7  # pinocchio
    pybullet >=3.0.8
    gym >=0.23.1
    opencv-python >=4.2.0.34
    pyyaml >=5.3.1

scripts =
    demos/demo_cameras.py
    demos/demo_control.py
    demos/demo_inverse_kinematics.py
    demos/demo_load_gym_env.py
    demos/demo_plain_torque_control.py
    demos/demo_random_policy.py
    demos/demo_trifinger_platform.py
    scripts/check_position_control_accuracy.py
    scripts/profiling.py

[options.extras_require]
test = pytest
doc = 
    sphinx
    sphinx_rtd_theme

[options.package_data]
trifinger_simulation =
    data/camera_params/*.yml
    data/cube_v2/*.blend
    data/cube_v2/*.urdf
    data/cube_v2/*.png
    data/cube_v2/*.mtl
    data/cube_v2/*.obj
    robot_properties_fingers/**/*.stl
    robot_properties_fingers/**/*.urdf

[options.data_files]
share/ament_index/resource_index/packages = resource/trifinger_simulation
share/trifinger_simulation = package.xml
